Revision history for Email-Sender

{{$NEXT}}

1.300012  2014-07-10 09:55:35-04:00 America/New_York
        - documentation fix: there's no Email::MIME->delete_header
          (thanks, Kris Matthews)

1.300011  2014-03-02 18:16:12-05:00 America/New_York
        - run the sendmail program with -i by default (thanks, William Blunn)
        - do not die when a race causes mkpath(Maildir/new) to fail because the
          directory already exists

1.300010  2014-01-11 14:15:13-05:00 America/New_York
        - the SMTP transport now has a "debug" option

1.300009  2013-09-01 12:03:06 America/New_York
          see also 1.300008!

          switch to automatic determination of prereqs to improve accuracy

1.300008  2013-09-01 09:39:13 America/New_York
          [THIS MIGHT BREAK YOUR CODE]
          at long last, Sendmail and Maildir transports replaces CRLF with CR
          before piping

          [BUG FIXES]
          fixes a bug where recipients beginning with a - would not work with
          the Sendmail transport [rt.perl.org #66246]

          require Email-Abstract 3.006, to get Email-Simple 1.998, to get
          Email::Simple->new(\$str), resolving [rt.perl.org #85926]

1.300007  2013-03-19 14:58:27 America/New_York
          when sending over SMTP, send DATA in hunks of 1 mebibyte or smaller

1.300006  2013-03-17 17:23:21 America/New_York
          re-fix the problem with attribute accessors and role methods
          clashing, previously fixed in 0.102360

1.300005  2013-02-14 11:37:09 America/New_York
          add missing prereq, Sub::Exporter; thanks for report, Esteban
          Manchado Velázquez

1.300004  2013-02-09 10:09:02 America/New_York
          bump required version of MooX::Types::MooseLike

1.300003  2013-02-06 15:56:53 America/New_York
          make Wrapper transports proxy is_simple and allow_partial_success to
          the wrapped transport

          allow Wrapper transports to construct their own targets; useful for